--- a/appsettings.json
+++ b/appsettings.json
@@ -21,7 +21,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587
   },
-  "AppUrl": "http://yourdomain.com/",
+  "AppUrl": "http://0.0.0.0:5294/",
 
   "AllowedHosts": "*"
 }
